frontend/test/should_fail/defYield_006i.grg
using defYield;

rule t
{
	pp:p();
	modify {
		y:B;
		pp(x, y);
	---
		def x:B;
	}
}

pattern p modify (x:B --- def z:B)
{
	modify {
	---
		eval { yield z = x; }
	}
}

